<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:text="@string/bombGame"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imgDynamite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/dynamite1" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn1Str"
                android:textSize="@dimen/btnTextSize" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn2Str"
                android:textSize="@dimen/btnTextSize" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn3Str"
                android:textSize="@dimen/btnTextSize" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn4Str"
                android:textSize="@dimen/btnTextSize" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn5Str"
                android:textSize="@dimen/btnTextSize" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn6Str"
                android:textSize="@dimen/btnTextSize" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn7Str"
                android:textSize="@dimen/btnTextSize" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn8Str"
                android:textSize="@dimen/btnTextSize" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn9Str"
                android:textSize="@dimen/btnTextSize" />

            <Button
                android:id="@+id/btn10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn10Str"
                android:textSize="@dimen/btnTextSize" />

            <Button
                android:id="@+id/btn11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn11Str"
                android:textSize="@dimen/btnTextSize" />

            <Button
                android:id="@+id/btn12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn12Str"
                android:textSize="@dimen/btnTextSize" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btn13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn13Str"
                android:textSize="@dimen/btnTextSize" />

            <Button
                android:id="@+id/btn14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn14Str"
                android:textSize="@dimen/btnTextSize" />

            <Button
                android:id="@+id/btn15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn15Str"
                android:textSize="@dimen/btnTextSize" />

            <Button
                android:id="@+id/btn16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn16Str"
                android:textSize="@dimen/btnTextSize" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:text="@string/pleasePush"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnRst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRst" />

</LinearLayout>